--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Keyhoh/quick-list/issues"
   },
-  "homepage": "https://github.com/Keyhoh/quick-list#readme"
+  "homepage": "https://github.com/Keyhoh/quick-list#readme",
+  "devDependencies": {
+    "@types/node": "^13.1.2",
+    "typescript": "^3.7.4"
+  }
 }
