テスト環境構築

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,6 +63,8 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
+
   /* User Settings */
-  "include": [ "./src/**/*" ]
+  "include": [ "./src/**/*" ],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
