--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "main": "index.ts",
   "scripts": {
-    "dev:build": "webpack --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode=development",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/Keyhoh/quick-list#readme",
   "devDependencies": {
+    "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
