--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "webpack --mode=development",
-    "test": "jest"
+    "test": "jest -o --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
+    "uuid-random": "^1.3.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
