--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "webpack --mode=development",
-    "test": "jest -o --watch"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,15 @@
   "devDependencies": {
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/redux": "^3.6.0",
     "jest": "^24.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
+    "redux": "^4.0.5",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
