--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux": "^3.6.0",
+    "css-loader": "^3.4.2",
     "jest": "^24.9.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
     "typesafe-actions": "^5.1.0",
