testで共通の処理をutilに追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,5 +66,9 @@
 
   /* User Settings */
   "include": [ "./src/**/*" ],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": [
+    "node_modules",
+    "__test__",
+    "**/*.spec.ts"
+  ]
 }
