--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,7 +68,7 @@
   "include": [ "./src/**/*" ],
   "exclude": [
     "node_modules",
-    "__test__",
+    "__tests__",
     "**/*.spec.ts"
   ]
 }
