--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "main": "index.ts",
   "scripts": {
-    "build": "webpack --mode=development",
-    "build:watch": "webpack --watch --mode=development",
+    "build": "webpack --config webpack.prod.js",
+    "build:watch": "webpack --watch --config webpack.dev.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -50,6 +50,7 @@
     "typescript": "^3.8.2",
     "uuid-random": "^1.3.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   }
 }
