--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.2",
     "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.1",
